bar/peerauth.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: namespace-level
  namespace: bar
spec:
  mtls:
    mode: DISABLE
